--- a/src/README
+++ b/src/README
@@ -10,7 +10,7 @@ A few files need more work:
   New files in this category need to be listed in ALL_BOOT in the Makefile.
 
 - Files that are realized in F# and OCaml separately
-  These have native implementations in F# and OCaml, and an F#-friendly fsi.  In some cases, the fsi needs massaging, as explained above.  These too are stored in boot/ subfolders (but see below).  The ml realization is stored in either ulib/ml or src/**/ml.
+  These have native implementations in F# and OCaml, and an F#-friendly fsi.  When the fsi needs massaging (as explained above) these are stored in boot/ subfolders (but see below).  Otherwised, they are stored along other fs files (F# forces us to keep fsi and fs files together, so we can't put the fs files only in boot/ or in a separate folder). The ml realization is stored in either ulib/ml or src/**/ml.
 
   Updates to these require modifying three files: the fsi, the fs, and the ml implementation.  Usually, you'll want to update any corresponding files in ulib for consistency (e.g. the compiler doesn't use FStar.List.fst from ulib, because we don't extract ulib for bootstraping, but it's nice to keep FStar.List.fs in src consistent with FStar.List.fst in ulib. Same for FStar.String.fst.)
 
@@ -20,17 +20,3 @@ A few files need more work:
   Some files have a separate, hand-written fsti interface that we read from ulib.  These files are stored in fs/ subfolders, and only read by F#.
 
   Updates to these requires modifying four files: the fsi, the fs, the ml implementation in ulib, the fsti in ulib, and possibly the fst in ulib.
-
-
-Another example, this time from the [Pprint] library. This is a different 
-situation from [List] above, in that the F* file is just declaring types 
-and function, we don't want to prove anything about the F* code, and the 
-main implementations are the OCaml and F# ones: 
-- prettyprint/prettyprint.fsti (F* interface file declaring types and functions);
-- prettyprint/prettyprint.{fs,fsi} (F# implementation of the fsti interface);
-- prettyprint/ml/FStar.Pprint.ml (OCaml implementation, has same module name as F* one)
-To build this:
-- Add the fsti file to src/Makefile's ALL_INTERFACES;
-- Build the {fs,fsi} files as part of the VS solution;
-- Add FStar_Pprint.cmx to src/ocaml-output/Makefile's FSTAR_OBJS. 
-
