--- a/src/extraction/ml/README
+++ b/src/extraction/ml/README
@@ -1,4 +1,4 @@
 The printer for the extracted ML code uses the OCaml compiler-libs, which depends 
 on the version of the OCaml compiler. In order for extraction to work with
-OCaml 4.02.3, 4.03.0, 4.04.0 and 4.05.0, four slightly different versions of the ML prettyprinter are included for now. Currently, the versions for 4.03.0, 4.04.0, and 4.05.0
+OCaml 4.02.3, 4.03.0, 4.04.0 and 4.05.0, four slightly different versions of the ML prettyprinter are included for now. The versions for 4.03.0 and 4.04.0
 are identical.
